feat: pattern for error message
